src/lang/smlParser.ts
// Generated from ./src/lang/sml.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { smlListener } from "./smlListener";
import { smlVisitor } from "./smlVisitor";


export class smlParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly CHAR = 24;
	public static readonly STR = 25;
	public static readonly REAL = 26;
	public static readonly INT = 27;
	public static readonly BOOL = 28;
	public static readonly ABSTYPE = 29;
	public static readonly AND = 30;
	public static readonly ANDALSO = 31;
	public static readonly AS = 32;
	public static readonly CASE = 33;
	public static readonly DATATYPE = 34;
	public static readonly DO = 35;
	public static readonly ELSE = 36;
	public static readonly END = 37;
	public static readonly EXCEPTION = 38;
	public static readonly FN = 39;
	public static readonly FUN = 40;
	public static readonly HANDLE = 41;
	public static readonly IF = 42;
	public static readonly IN = 43;
	public static readonly INFIX = 44;
	public static readonly INFIXR = 45;
	public static readonly LET = 46;
	public static readonly LOCAL = 47;
	public static readonly NONFIX = 48;
	public static readonly OF = 49;
	public static readonly OP = 50;
	public static readonly OPEN = 51;
	public static readonly ORELSE = 52;
	public static readonly RAISE = 53;
	public static readonly REC = 54;
	public static readonly THEN = 55;
	public static readonly TYPE = 56;
	public static readonly VAL = 57;
	public static readonly WITH = 58;
	public static readonly WITHTYPE = 59;
	public static readonly WHILE = 60;
	public static readonly TRUE = 61;
	public static readonly FALSE = 62;
	public static readonly ID = 63;
	public static readonly DIGIT = 64;
	public static readonly LETTER = 65;
	public static readonly NEWLINE = 66;
	public static readonly WHITESPACE = 67;
	public static readonly COMMENT = 68;
	public static readonly RULE_program = 0;
	public static readonly RULE_declaration = 1;
	public static readonly RULE_valbind = 2;
	public static readonly RULE_funbind = 3;
	public static readonly RULE_pattern = 4;
	public static readonly RULE_matching = 5;
	public static readonly RULE_matchingrule = 6;
	public static readonly RULE_keypattern = 7;
	public static readonly RULE_expression = 8;
	public static readonly RULE_keyvalue = 9;
	public static readonly RULE_label = 10;
	public static readonly RULE_identifier = 11;
	public static readonly RULE_constant = 12;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "declaration", "valbind", "funbind", "pattern", "matching", 
		"matchingrule", "keypattern", "expression", "keyvalue", "label", "identifier", 
		"constant",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "';'", "'='", "'|'", "'::'", "'('", "','", "')'", "'{'", "'}'", 
		"'['", "']'", "'=>'", "'*'", "'/'", "'+'", "'-'", "'^'", "'<>'", "'<'", 
		"'<='", "'>'", "'>='", "'#'", undefined, undefined, undefined, undefined, 
		undefined, "'abstype'", "'and'", "'andalso'", "'as'", "'case'", "'datatype'", 
		"'do'", "'else'", "'end'", "'exception'", "'fn'", "'fun'", "'handle'", 
		"'if'", "'in'", "'infix'", "'infixr'", "'let'", "'local'", "'nonfix'", 
		"'of'", "'op'", "'open'", "'orelse'", "'raise'", "'rec'", "'then'", "'type'", 
		"'val'", "'with'", "'withtype'", "'while'", "'true'", "'false'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, "CHAR", "STR", "REAL", "INT", "BOOL", 
		"ABSTYPE", "AND", "ANDALSO", "AS", "CASE", "DATATYPE", "DO", "ELSE", "END", 
		"EXCEPTION", "FN", "FUN", "HANDLE", "IF", "IN", "INFIX", "INFIXR", "LET", 
		"LOCAL", "NONFIX", "OF", "OP", "OPEN", "ORELSE", "RAISE", "REC", "THEN", 
		"TYPE", "VAL", "WITH", "WITHTYPE", "WHILE", "TRUE", "FALSE", "ID", "DIGIT", 
		"LETTER", "NEWLINE", "WHITESPACE", "COMMENT",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(smlParser._LITERAL_NAMES, smlParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return smlParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "sml.g4"; }

	// @Override
	public get ruleNames(): string[] { return smlParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return smlParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(smlParser._ATN, this);
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, smlParser.RULE_program);
		let _la: number;
		try {
			this.state = 31;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case smlParser.T__4:
			case smlParser.T__7:
			case smlParser.T__9:
			case smlParser.T__22:
			case smlParser.CHAR:
			case smlParser.STR:
			case smlParser.REAL:
			case smlParser.INT:
			case smlParser.BOOL:
			case smlParser.CASE:
			case smlParser.FN:
			case smlParser.FUN:
			case smlParser.IF:
			case smlParser.LET:
			case smlParser.VAL:
			case smlParser.ID:
				_localctx = new ProgramDeclarationContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 26;
				this.declaration(0);
				this.state = 28;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === smlParser.T__0) {
					{
					this.state = 27;
					this.match(smlParser.T__0);
					}
				}

				}
				break;
			case smlParser.EOF:
				_localctx = new ProgramEmptyContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				// tslint:disable-next-line:no-empty
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public declaration(): DeclarationContext;
	public declaration(_p: number): DeclarationContext;
	// @RuleVersion(0)
	public declaration(_p?: number): DeclarationContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: DeclarationContext = new DeclarationContext(this._ctx, _parentState);
		let _prevctx: DeclarationContext = _localctx;
		let _startState: number = 2;
		this.enterRecursionRule(_localctx, 2, smlParser.RULE_declaration, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 39;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case smlParser.FUN:
				{
				_localctx = new DeclarationFunctionContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;

				this.state = 34;
				this.match(smlParser.FUN);
				this.state = 35;
				this.funbind();
				}
				break;
			case smlParser.VAL:
				{
				_localctx = new DeclarationValueContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 36;
				this.match(smlParser.VAL);
				this.state = 37;
				this.valbind();
				}
				break;
			case smlParser.T__4:
			case smlParser.T__7:
			case smlParser.T__9:
			case smlParser.T__22:
			case smlParser.CHAR:
			case smlParser.STR:
			case smlParser.REAL:
			case smlParser.INT:
			case smlParser.BOOL:
			case smlParser.CASE:
			case smlParser.FN:
			case smlParser.IF:
			case smlParser.LET:
			case smlParser.ID:
				{
				_localctx = new DeclarationExpressionContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 38;
				this.expression(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 48;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 4, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					{
					_localctx = new DeclarationSequenceContext(new DeclarationContext(_parentctx, _parentState));
					(_localctx as DeclarationSequenceContext)._left = _prevctx;
					this.pushNewRecursionContext(_localctx, _startState, smlParser.RULE_declaration);
					this.state = 41;
					if (!(this.precpred(this._ctx, 4))) {
						throw this.createFailedPredicateException("this.precpred(this._ctx, 4)");
					}
					this.state = 43;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (_la === smlParser.T__0) {
						{
						this.state = 42;
						this.match(smlParser.T__0);
						}
					}

					this.state = 45;
					(_localctx as DeclarationSequenceContext)._right = this.declaration(5);
					}
					}
				}
				this.state = 50;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 4, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public valbind(): ValbindContext {
		let _localctx: ValbindContext = new ValbindContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, smlParser.RULE_valbind);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 51;
			_localctx._name = this.identifier();
			this.state = 52;
			this.match(smlParser.T__1);
			this.state = 53;
			_localctx._value = this.expression(0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public funbind(): FunbindContext {
		let _localctx: FunbindContext = new FunbindContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, smlParser.RULE_funbind);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 55;
			_localctx._name = this.identifier();
			this.state = 56;
			_localctx._pat = this.pattern(0);
			this.state = 57;
			this.match(smlParser.T__1);
			this.state = 58;
			_localctx._body = this.expression(0);
			this.state = 63;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 5, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 59;
					this.match(smlParser.T__2);
					this.state = 60;
					_localctx._rest = this.funbind();
					}
					}
				}
				this.state = 65;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 5, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public pattern(): PatternContext;
	public pattern(_p: number): PatternContext;
	// @RuleVersion(0)
	public pattern(_p?: number): PatternContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: PatternContext = new PatternContext(this._ctx, _parentState);
		let _prevctx: PatternContext = _localctx;
		let _startState: number = 8;
		this.enterRecursionRule(_localctx, 8, smlParser.RULE_pattern, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 111;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 11, this._ctx) ) {
			case 1:
				{
				_localctx = new PatternTupleContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;

				this.state = 67;
				this.match(smlParser.T__4);
				this.state = 68;
				this.pattern(0);
				this.state = 69;
				this.match(smlParser.T__5);
				this.state = 70;
				this.pattern(0);
				this.state = 75;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === smlParser.T__5) {
					{
					{
					this.state = 71;
					this.match(smlParser.T__5);
					this.state = 72;
					this.pattern(0);
					}
					}
					this.state = 77;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 78;
				this.match(smlParser.T__6);
				}
				break;

			case 2:
				{
				_localctx = new PatternParanthesesContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 80;
				this.match(smlParser.T__4);
				this.state = 81;
				this.pattern(0);
				this.state = 82;
				this.match(smlParser.T__6);
				}
				break;

			case 3:
				{
				_localctx = new PatternRecordContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 84;
				this.match(smlParser.T__7);
				this.state = 95;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 9, this._ctx) ) {
				case 1:
					{
					this.state = 86;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (_la === smlParser.INT || _la === smlParser.ID) {
						{
						this.state = 85;
						this.keypattern();
						}
					}

					}
					break;

				case 2:
					{
					{
					this.state = 88;
					this.keypattern();
					this.state = 91;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					do {
						{
						{
						this.state = 89;
						this.match(smlParser.T__5);
						this.state = 90;
						this.keypattern();
						}
						}
						this.state = 93;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					} while (_la === smlParser.T__5);
					}
					}
					break;
				}
				this.state = 97;
				this.match(smlParser.T__8);
				}
				break;

			case 4:
				{
				_localctx = new PatternListContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 98;
				this.match(smlParser.T__9);
				this.state = 99;
				this.pattern(0);
				this.state = 104;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === smlParser.T__5) {
					{
					{
					this.state = 100;
					this.match(smlParser.T__5);
					this.state = 101;
					this.pattern(0);
					}
					}
					this.state = 106;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 107;
				this.match(smlParser.T__10);
				}
				break;

			case 5:
				{
				_localctx = new PatternConstantContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 109;
				this.constant();
				}
				break;

			case 6:
				{
				_localctx = new PatternIdentifierContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 110;
				this.identifier();
				}
				break;
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 118;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 12, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					{
					_localctx = new PatternInfixContext(new PatternContext(_parentctx, _parentState));
					(_localctx as PatternInfixContext)._left = _prevctx;
					this.pushNewRecursionContext(_localctx, _startState, smlParser.RULE_pattern);
					this.state = 113;
					if (!(this.precpred(this._ctx, 7))) {
						throw this.createFailedPredicateException("this.precpred(this._ctx, 7)");
					}
					this.state = 114;
					this.match(smlParser.T__3);
					this.state = 115;
					(_localctx as PatternInfixContext)._right = this.pattern(7);
					}
					}
				}
				this.state = 120;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 12, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public matching(): MatchingContext {
		let _localctx: MatchingContext = new MatchingContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, smlParser.RULE_matching);
		try {
			this.state = 126;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 13, this._ctx) ) {
			case 1:
				_localctx = new MatchingSequenceContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 121;
				(_localctx as MatchingSequenceContext)._matchrule = this.matchingrule();
				this.state = 122;
				this.match(smlParser.T__2);
				this.state = 123;
				(_localctx as MatchingSequenceContext)._rest = this.matching();
				}
				break;

			case 2:
				_localctx = new MatchingAtomicContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 125;
				(_localctx as MatchingAtomicContext)._matchrule = this.matchingrule();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public matchingrule(): MatchingruleContext {
		let _localctx: MatchingruleContext = new MatchingruleContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, smlParser.RULE_matchingrule);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 128;
			_localctx._pat = this.pattern(0);
			this.state = 129;
			this.match(smlParser.T__11);
			this.state = 130;
			_localctx._exp = this.expression(0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public keypattern(): KeypatternContext {
		let _localctx: KeypatternContext = new KeypatternContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, smlParser.RULE_keypattern);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 132;
			_localctx._key = this.label();
			this.state = 133;
			this.match(smlParser.T__1);
			this.state = 134;
			_localctx._pat = this.pattern(0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public expression(): ExpressionContext;
	public expression(_p: number): ExpressionContext;
	// @RuleVersion(0)
	public expression(_p?: number): ExpressionContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: ExpressionContext = new ExpressionContext(this._ctx, _parentState);
		let _prevctx: ExpressionContext = _localctx;
		let _startState: number = 16;
		this.enterRecursionRule(_localctx, 16, smlParser.RULE_expression, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 206;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 21, this._ctx) ) {
			case 1:
				{
				_localctx = new ExpressionLambdaContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;

				this.state = 137;
				this.match(smlParser.FN);
				this.state = 138;
				this.matching();
				}
				break;

			case 2:
				{
				_localctx = new ExpressionLetContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 139;
				this.match(smlParser.LET);
				this.state = 140;
				(_localctx as ExpressionLetContext)._dec = this.declaration(0);
				this.state = 141;
				this.match(smlParser.IN);
				this.state = 142;
				(_localctx as ExpressionLetContext)._exp = this.expression(0);
				this.state = 143;
				this.match(smlParser.END);
				}
				break;

			case 3:
				{
				_localctx = new ExpressionParenthesesContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 145;
				this.match(smlParser.T__4);
				this.state = 146;
				(_localctx as ExpressionParenthesesContext)._inner = this.expression(0);
				this.state = 147;
				this.match(smlParser.T__6);
				}
				break;

			case 4:
				{
				_localctx = new ExpressionConditionalContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 149;
				this.match(smlParser.IF);
				this.state = 150;
				(_localctx as ExpressionConditionalContext)._pred = this.expression(0);
				this.state = 151;
				this.match(smlParser.THEN);
				this.state = 152;
				(_localctx as ExpressionConditionalContext)._cons = this.expression(0);
				this.state = 153;
				this.match(smlParser.ELSE);
				this.state = 154;
				(_localctx as ExpressionConditionalContext)._alt = this.expression(8);
				}
				break;

			case 5:
				{
				_localctx = new ExpressionCaseContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 156;
				this.match(smlParser.CASE);
				this.state = 157;
				(_localctx as ExpressionCaseContext)._exp = this.expression(0);
				this.state = 158;
				this.match(smlParser.OF);
				this.state = 159;
				(_localctx as ExpressionCaseContext)._match = this.matching();
				}
				break;

			case 6:
				{
				_localctx = new ExpressionRecordContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 161;
				this.match(smlParser.T__7);
				this.state = 172;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 16, this._ctx) ) {
				case 1:
					{
					this.state = 163;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (_la === smlParser.INT || _la === smlParser.ID) {
						{
						this.state = 162;
						this.keyvalue();
						}
					}

					}
					break;

				case 2:
					{
					{
					this.state = 165;
					this.keyvalue();
					this.state = 168;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					do {
						{
						{
						this.state = 166;
						this.match(smlParser.T__5);
						this.state = 167;
						this.keyvalue();
						}
						}
						this.state = 170;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					} while (_la === smlParser.T__5);
					}
					}
					break;
				}
				this.state = 174;
				this.match(smlParser.T__8);
				}
				break;

			case 7:
				{
				_localctx = new ExpressionTupleContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 175;
				this.match(smlParser.T__4);
				this.state = 176;
				this.expression(0);
				this.state = 177;
				this.match(smlParser.T__5);
				this.state = 178;
				this.expression(0);
				this.state = 183;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === smlParser.T__5) {
					{
					{
					this.state = 179;
					this.match(smlParser.T__5);
					this.state = 180;
					this.expression(0);
					}
					}
					this.state = 185;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 186;
				this.match(smlParser.T__6);
				}
				break;

			case 8:
				{
				_localctx = new ExpressionListContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 188;
				this.match(smlParser.T__9);
				this.state = 199;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 20, this._ctx) ) {
				case 1:
					{
					this.state = 190;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << smlParser.T__4) | (1 << smlParser.T__7) | (1 << smlParser.T__9) | (1 << smlParser.T__22) | (1 << smlParser.CHAR) | (1 << smlParser.STR) | (1 << smlParser.REAL) | (1 << smlParser.INT) | (1 << smlParser.BOOL))) !== 0) || ((((_la - 33)) & ~0x1F) === 0 && ((1 << (_la - 33)) & ((1 << (smlParser.CASE - 33)) | (1 << (smlParser.FN - 33)) | (1 << (smlParser.IF - 33)) | (1 << (smlParser.LET - 33)) | (1 << (smlParser.ID - 33)))) !== 0)) {
						{
						this.state = 189;
						this.expression(0);
						}
					}

					}
					break;

				case 2:
					{
					{
					this.state = 192;
					this.expression(0);
					this.state = 195;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					do {
						{
						{
						this.state = 193;
						this.match(smlParser.T__5);
						this.state = 194;
						this.expression(0);
						}
						}
						this.state = 197;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					} while (_la === smlParser.T__5);
					}
					}
					break;
				}
				this.state = 201;
				this.match(smlParser.T__10);
				}
				break;

			case 9:
				{
				_localctx = new ExpressionRecordSelectorContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 202;
				this.match(smlParser.T__22);
				this.state = 203;
				this.label();
				}
				break;

			case 10:
				{
				_localctx = new ExpressionConstantContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 204;
				this.constant();
				}
				break;
